<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DepositoActivity">

    <TextView
            android:text="@string/deposito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.087"
            android:fontFamily="monospace" android:typeface="monospace" android:textSize="30sp"
            android:lineSpacingExtra="30sp" app:layout_constraintHorizontal_bias="0.498"/>
    <SearchView
            android:layout_width="319dp"
            android:layout_height="71dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:id="@+id/searchView" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintHorizontal_bias="0.071"/>
    <ListView
            android:layout_width="556dp"
            android:layout_height="319dp"
            app:layout_constraintEnd_toEndOf="@+id/searchView" app:layout_constraintStart_toStartOf="@+id/searchView"
            android:layout_marginTop="116dp" app:layout_constraintTop_toBottomOf="@+id/searchView"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/datos_titular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:typeface="monospace"
            android:fontFamily="monospace" android:textSize="30sp" android:lineSpacingExtra="30sp"
            app:layout_constraintStart_toStartOf="@+id/searchView"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/searchView"/>
    <TextView
            android:text="@string/buscar_cuenta"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:id="@+id/textView4" android:typeface="monospace"
            android:fontFamily="monospace" android:textSize="30sp" android:lineSpacingExtra="30sp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="@+id/searchView"/>
    <Button
            android:text="@string/btn_buscar"
            android:layout_width="151dp"
            android:layout_height="49dp"
            android:id="@+id/button2" app:layout_constraintStart_toEndOf="@+id/searchView"
            app:layout_constraintTop_toTopOf="@+id/searchView"
            app:layout_constraintBottom_toBottomOf="@+id/searchView" app:layout_constraintVertical_bias="0.409"
            android:layout_marginStart="76dp"/>
    <Button
            android:text="@string/btn_siguiente"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            app:layout_constraintTop_toBottomOf="@+id/_dynamic" android:layout_marginTop="52dp"
            app:layout_constraintEnd_toEndOf="@+id/_dynamic" android:layout_marginEnd="8dp"/>
</android.support.constraint.ConstraintLayout>